[project]
name = "flathub-backend"
version = "0.1.0"
description = "Backend for Flathub website"
license = {text = "Apache-2.0"}
authors = [
    {name = "Bartłomiej Piotrowski", email = "bpiotrowski@gnome.org"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi<1.0.0,>=0.115.8",
    "sentry-sdk[httpx]<3.0.0,>=2.22.0",
    "lxml>=6.0.4,<7.0.0",
    "requests<3.0.0,>=2.32.3",
    "redis>=5.2.1,<8.0.0",
    "feedgen<2.0.0,>=1.0.0",
    "PyGObject<4.0.0,>=3.50.0",
    "alembic<2.0.0,>=1.14.1",
    "itsdangerous<3.0,>=2.2",
    "PyGithub<3.0,>=2.6",
    "vcrpy>=7.0.0,<9.0.0",
    "python-gitlab>=5.6,<9.0",
    "stripe>=11.5,<16.0",
    "PyJWT<3.0.0,>=2.10.1",
    "meilisearch<1.0.0,>=0.34.0",
    "orjson<4.0.0,>=3.10.15",
    "python-multipart<1.0.0,>=0.0.20",
    "dramatiq[redis,watch,prometheus_client]>=1.17.1,<3.0.0",
    "sqlalchemy==2.0.49",
    "pydantic-settings<3.0.0,>=2.8.0",
    "publicsuffixlist<2.0.0.0,>=1.0.2.20240903",
    "httpx<1.0.0,>=0.28.1",
    "apscheduler==3.11.2",
    "granian[reload,uvloop]>=2.6.0",
    "memray>=1.19.1",
    "psycopg[binary]>=3.3.3",
    "authlib>=1.3,<2.0",
]

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.9.7",
    "pytest>=9.0.3,<10.0.0",
    "pytest-insta<1.0.0,>=0.3.0",
    "watchgod<1.0,>=0.8",
    "vcrpy>=7.0.0,<9.0.0",
]

[tool.ruff]
lint.ignore = ["E501", "E402", "UP042"]
lint.extend-select = ["I", "W", "UP", "TCH"]
exclude = ["alembic/versions/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
