[project]
name = "flathub-backend"
version = "0.1.0"
description = "Backend for Flathub website"
license = {text = "Apache-2.0"}
authors = [
    {name = "Bartłomiej Piotrowski", email = "bpiotrowski@gnome.org"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi>=0.138.0,<1.0.0",
    "sentry-sdk[httpx]>=2.66.1,<3.0.0",
    "lxml>=6.1.1,<7.0.0",
    "requests>=2.34.2,<3.0.0",
    "redis>=5.2.1,<8.0.0",
    "feedgen<2.0.0,>=1.0.0",
    "PyGObject<4.0.0,>=3.50.0",
    "alembic<2.0.0,>=1.14.1",
    "itsdangerous<3.0,>=2.2",
    "PyGithub<3.0,>=2.6",
    "vcrpy>=8.3.0,<9.0.0",
    "python-gitlab>=8.4.0,<9.0",
    "stripe>=15.1.0,<16.0",
    "PyJWT<3.0.0,>=2.10.1",
    "meilisearch>=0.41.0,<1.0.0",
    "orjson>=3.11.9,<4.0.0",
    "python-multipart>=0.0.32,<1.0.0",
    "dramatiq[redis,watch,prometheus_client]>=2.1.0,<3.0.0",
    "sqlalchemy==2.0.51",
    "pydantic-settings>=2.14.1,<3.0.0",
    "publicsuffixlist>=1.0.2.20260702,<2.0.0.0",
    "httpx<1.0.0,>=0.28.1",
    "apscheduler==3.11.2",
    "granian[reload,uvloop]>=2.7.9",
    "memray>=1.19.1",
    "psycopg[binary]>=3.3.4",
    "authlib>=1.7.2,<2.0",
    "joserfc>=1.7.4",
    "dnspython>=2.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.16.0,<1.0.0",
    "pytest>=9.1.1,<10.0.0",
    "pytest-insta<1.0.0,>=0.3.0",
    "watchgod<1.0,>=0.8",
    "vcrpy>=8.3.0,<9.0.0",
    "ty>=0.0.49",
]

[tool.ruff]
lint.ignore = ["E501", "E402", "UP042"]
lint.extend-select = ["I", "W", "UP", "TCH"]
exclude = ["alembic/versions/*"]

[tool.ty.src]
include = [
    "app"
]
